--- a/build.properties
+++ b/build.properties
@@ -5,7 +5,8 @@ bin.includes = .,\
                META-INF/,\
                plugin.xml,\
                plugin.properties,\
-               icons/
+               icons/,\
+               svg/
 jars.compile.order = .
 source.. = src/
 output.. = bin/
